--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ railroad = { version="0.3.2", features = [ "resvg" ]}
 
 [lib]
 name = "railroad_dsl"
-crate-type = ["cdylib", "rlib"]
+crate-type = ["cdylib", "rlib", "staticlib"]
 
 [build-dependencies]
 cbindgen = "0.29.0"
